lab2/test_files/syntax_errors/no_statement_in_main.java
public class Factorial{
    public static void main(String[] a){
    }
}

class Element {
    public boolean Init(){
        return false;        
    }
}
